[gd_scene format=4 uid="uid://b2aof6ymy6w83"]

[ext_resource type="PackedScene" uid="uid://bffp3y2vd3m0" path="res://background.tscn" id="1_036b0"]
[ext_resource type="Texture2D" uid="uid://bpkjago2tog37" path="res://sprite_sheets/tileset01.png" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://ck57p64y6xmro" path="res://scripts/world.gd" id="1_ic0uy"]
[ext_resource type="PackedScene" uid="uid://c4kb1l50d2qxn" path="res://cass.tscn" id="2_fj7yv"]
[ext_resource type="PackedScene" uid="uid://doshnu7dj3dh4" path="res://hud.tscn" id="2_wse8f"]
[ext_resource type="PackedScene" uid="uid://bsv5oti4pfml7" path="res://health.tscn" id="3_ioo17"]
[ext_resource type="Script" uid="uid://dvfochld6c1vb" path="res://scripts/leveltilemap.gd" id="4_dwbse"]
[ext_resource type="PackedScene" uid="uid://wiwh72pl8p5e" path="res://bird_enemy.tscn" id="5_036b0"]
[ext_resource type="PackedScene" uid="uid://twekq0ffy7qu" path="res://crab_enemy.tscn" id="6_dwbse"]
[ext_resource type="PackedScene" uid="uid://chfx2xxexm5kp" path="res://konky_dong.tscn" id="7_pkg7o"]
[ext_resource type="PackedScene" uid="uid://bp3cthlgen1el" path="res://barrel.tscn" id="8_gbfbk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fj7yv"]
texture = ExtResource("1_f3sb7")
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
3:6/0 = 0
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:7/0 = 0
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:7/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0

[sub_resource type="TileSet" id="TileSet_tlwt5"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_fj7yv")

[node name="world" type="Node2D" unique_id=14598685]
position = Vector2(120, -40)
script = ExtResource("1_ic0uy")

[node name="PlayerHealth" parent="." unique_id=1782241014 instance=ExtResource("3_ioo17")]

[node name="hud" parent="." unique_id=67186710 instance=ExtResource("2_wse8f")]

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=1682166673]
z_index = 1
position = Vector2(-112, 48)
tile_map_data = PackedByteArray("AAAJAAgAAAAGAAEAAAAIAAgAAAAGAAEAAAAHAAgAAAAGAAEAAAAGAAgAAAAGAAEAAAAFAAgAAAAGAAEAAAAEAAgAAAAGAAEAAAADAAgAAAAGAAEAAAACAAgAAAAGAAEAAAABAAgAAAAGAAEAAAAAAAgAAAAGAAEAAAAKAAgAAAAGAAEAAAALAAgAAAAGAAEAAAAMAAgAAAAGAAEAAAANAAgAAAAGAAEAAAAOAAgAAAAGAAEAAAAPAAgAAAAGAAIAAAAQAAgAAAAGAAIAAAARAAgAAAAGAAIAAAASAAgAAAAGAAEAAAATAAgAAAAGAAEAAAAAAAkAAAAGAAIAAAABAAkAAAAGAAIAAAACAAkAAAAGAAIAAAADAAkAAAAGAAIAAAAEAAkAAAAGAAIAAAAFAAkAAAAGAAIAAAAGAAkAAAAGAAIAAAAHAAkAAAAGAAIAAAAIAAkAAAAGAAIAAAAJAAkAAAAGAAIAAAAKAAkAAAAGAAIAAAALAAkAAAAGAAIAAAAMAAkAAAAGAAIAAAANAAkAAAAGAAIAAAAOAAkAAAAGAAIAAAAPAAkAAAAGAAIAAAAQAAkAAAAGAAIAAAARAAkAAAAGAAIAAAASAAkAAAAGAAIAAAATAAkAAAACAAIAAAATAAoAAAACAAIAAAASAAoAAAAGAAIAAAARAAoAAAAGAAIAAAAQAAoAAAAGAAIAAAAPAAoAAAAGAAIAAAAOAAoAAAAGAAIAAAANAAoAAAAGAAIAAAAMAAoAAAAGAAIAAAALAAoAAAAGAAIAAAAKAAoAAAAGAAIAAAAJAAoAAAAGAAIAAAAIAAoAAAAGAAIAAAAHAAoAAAAGAAIAAAAGAAoAAAAGAAIAAAAFAAoAAAAGAAIAAAAEAAoAAAAGAAIAAAADAAoAAAAGAAIAAAACAAoAAAAGAAIAAAABAAoAAAAGAAIAAAAAAAoAAAAGAAIAAAARAAcAAAAGAAIAAAAPAAcAAAAGAAIAAAAQAAcAAAAGAAIAAAAQAAYAAAAGAAIAAAAPAAYAAAAGAAIAAAARAAYAAAAGAAIAAAAQAAUAAAAGAAIAAAAPAAUAAAAGAAIAAAARAAUAAAAGAAIAAAD//woAAAAGAAIAAAD//wkAAAAGAAIAAAD//wgAAAAGAAEAAAAPAAQAAAAGAAIAAAAPAAMAAAAFAAEAAAAQAAQAAAAGAAIAAAAQAAMAAAAGAAEAAAARAAQAAAAGAAIAAAARAAMAAAAHAAEAAAALAAIAAAAHAAMAAAAKAAIAAAAGAAMAAAAJAAIAAAAFAAMAAAAKAAEAAAAGAAEAAAAJAAEAAAAFAAEAAAALAAEAAAAHAAEAAAD+/wgAAAAGAAEAAAD9/wgAAAAFAAEAAAD8/wkAAAACAAEAAAD7/wkAAAACAAEAAAD6/wkAAAACAAEAAAD5/wkAAAACAAEAAAD9/wkAAAACAAIAAAD+/wkAAAACAAIAAAD+/woAAAACAAIAAAD9/woAAAACAAIAAAD8/woAAAACAAIAAAD7/woAAAACAAIAAAD6/woAAAACAAIAAAD5/woAAAACAAIAAAD5/wsAAAACAAIAAAD6/wsAAAACAAIAAAD7/wsAAAACAAIAAAD8/wsAAAACAAIAAAD9/wsAAAACAAIAAAD+/wsAAAACAAIAAAD//wsAAAACAAIAAAAAAAsAAAACAAIAAAABAAsAAAACAAIAAAACAAsAAAACAAIAAAADAAsAAAACAAIAAAAEAAsAAAACAAIAAAAFAAsAAAACAAIAAAAGAAsAAAACAAIAAAAHAAsAAAACAAIAAAAIAAsAAAACAAIAAAAJAAsAAAACAAIAAAAKAAsAAAACAAIAAAALAAsAAAACAAIAAAAMAAsAAAACAAIAAAANAAsAAAACAAIAAAAOAAsAAAACAAIAAAAPAAsAAAACAAIAAAAQAAsAAAACAAIAAAARAAsAAAACAAIAAAASAAsAAAACAAIAAAATAAsAAAACAAIAAAAUAAsAAAACAAIAAAAVAAsAAAACAAIAAAAWAAsAAAACAAIAAAAXAAsAAAACAAIAAAAYAAsAAAACAAIAAAAZAAsAAAACAAIAAAAaAAsAAAACAAIAAAAbAAsAAAACAAIAAAAbAAoAAAACAAIAAAAaAAoAAAACAAIAAAAZAAoAAAACAAIAAAAYAAoAAAACAAIAAAAXAAoAAAACAAIAAAAWAAoAAAACAAIAAAAVAAoAAAACAAIAAAAUAAoAAAACAAIAAAAUAAkAAAACAAIAAAAVAAkAAAACAAIAAAAWAAkAAAACAAIAAAAXAAkAAAACAAIAAAAYAAkAAAACAAIAAAAZAAkAAAACAAIAAAAaAAkAAAACAAIAAAAbAAkAAAACAAIAAAAUAAgAAAAGAAEAAAAVAAgAAAAGAAEAAAAWAAgAAAAGAAEAAAAXAAgAAAAGAAEAAAAYAAgAAAAGAAEAAAAZAAgAAAAGAAEAAAAaAAgAAAAGAAEAAAAbAAgAAAAGAAEAAAAYAAIAAAAHAAMAAAAXAAEAAAAGAAEAAAAWAAEAAAAFAAEAAAAYAAEAAAAHAAEAAAAJAAcAAAACAAQAAAAIAAcAAAABAAQAAAAKAAcAAAABAAQAAAALAAcAAAAAAAQAAAAHAAcAAAAAAAQAAAAVAAcAAAAAAAQAAAAWAAcAAAACAAQAAAD+/wcAAAABAAQAAAATAAcAAAADAAQAAAABAAcAAAADAAYAAAAYAAcAAAAEAAUAAAD4/wkAAAACAAEAAAD3/wkAAAACAAEAAAD2/wkAAAACAAEAAAD1/wkAAAACAAEAAAD0/wkAAAACAAEAAADz/wcAAAADAAEAAADy/wcAAAACAAEAAADx/wcAAAACAAEAAADw/wYAAAADAAEAAADw/wcAAAACAAIAAADv/wYAAAACAAEAAADz/wgAAAADAAIAAAD4/woAAAACAAIAAAD3/woAAAACAAIAAAD2/woAAAACAAIAAAD1/woAAAACAAIAAAD0/woAAAACAAIAAADz/woAAAACAAIAAADy/woAAAACAAIAAAD1/wsAAAACAAIAAAD2/wsAAAACAAIAAAD3/wsAAAACAAIAAAD4/wsAAAACAAIAAAD0/wsAAAACAAIAAADz/wsAAAACAAIAAADy/wkAAAACAAIAAADz/wkAAAACAAIAAADy/wsAAAACAAIAAADy/wgAAAACAAIAAADx/wgAAAACAAIAAADw/wgAAAACAAIAAADv/wgAAAACAAIAAADv/wcAAAACAAIAAADv/wkAAAACAAIAAADw/wkAAAACAAIAAADx/wkAAAACAAIAAADx/woAAAACAAIAAADw/woAAAACAAIAAADv/woAAAACAAIAAADv/wsAAAACAAIAAADw/wsAAAACAAIAAADx/wsAAAACAAIAAAD4/wgAAAADAAQAAAD5/wgAAAAEAAUAAAAcAAkAAAAGAAIAAAAdAAkAAAAGAAIAAAAeAAkAAAAGAAIAAAAfAAkAAAAGAAIAAAAgAAkAAAAGAAIAAAAhAAkAAAAGAAIAAAAhAAoAAAAGAAIAAAAiAAoAAAAGAAIAAAAjAAoAAAAGAAIAAAAkAAoAAAAGAAIAAAAkAAkAAAAGAAIAAAAjAAkAAAAGAAIAAAAiAAkAAAAGAAIAAAAlAAkAAAAGAAIAAAAmAAkAAAAGAAIAAAAnAAkAAAAGAAIAAAAoAAkAAAAGAAIAAAApAAkAAAAGAAIAAAAqAAkAAAAGAAIAAAArAAkAAAAGAAIAAAAsAAkAAAAGAAIAAAAtAAkAAAAGAAIAAAAuAAkAAAAGAAIAAAAvAAkAAAAGAAIAAAAuAAgAAAAGAAIAAAAuAAcAAAAGAAIAAAAuAAYAAAAGAAIAAAAvAAYAAAAGAAIAAAAuAAUAAAAGAAIAAAAuAAQAAAAGAAIAAAAuAAMAAAAGAAIAAAAuAAIAAAAGAAIAAAAvAAIAAAAGAAIAAAAtAAIAAAAGAAIAAAAtAAEAAAAGAAIAAAAtAAAAAAAGAAIAAAAtAAMAAAAGAAIAAAAtAAQAAAAGAAIAAAAtAAUAAAAGAAIAAAAtAAgAAAAGAAIAAAAtAAYAAAAGAAIAAAAtAAcAAAAGAAIAAAAuAAEAAAAGAAIAAAAuAAAAAAAGAAIAAAAvAAEAAAAGAAIAAAAvAAMAAAAGAAIAAAAvAAQAAAAGAAIAAAAvAAUAAAAGAAIAAAAvAAcAAAAGAAIAAAAvAAgAAAAGAAIAAAAvAAoAAAAGAAIAAAAvAAsAAAAGAAIAAAAuAAsAAAAGAAIAAAAuAAoAAAAGAAIAAAAtAAoAAAAGAAIAAAAsAAoAAAAGAAIAAAArAAoAAAAGAAIAAAAqAAoAAAAGAAIAAAApAAoAAAAGAAIAAAAoAAoAAAAGAAIAAAAmAAoAAAAGAAIAAAAnAAoAAAAGAAIAAAAqAAsAAAAGAAIAAAArAAsAAAAGAAIAAAAsAAsAAAAGAAIAAAAtAAsAAAAGAAIAAAApAAsAAAAGAAIAAAAoAAsAAAAGAAIAAAAnAAsAAAAGAAIAAAAmAAsAAAAGAAIAAAAlAAoAAAAGAAIAAAAgAAoAAAAGAAIAAAAfAAoAAAAGAAIAAAAeAAoAAAAGAAIAAAAdAAoAAAAGAAIAAAAcAAoAAAAGAAIAAAAcAAsAAAAGAAIAAAAdAAsAAAAGAAIAAAAeAAsAAAAGAAIAAAAfAAsAAAAGAAIAAAAgAAsAAAAGAAIAAAAhAAsAAAAGAAIAAAAiAAsAAAAGAAIAAAAjAAsAAAAGAAIAAAAkAAsAAAAGAAIAAAAlAAsAAAAGAAIAAAAcAAgAAAAGAAEAAAAdAAgAAAAGAAEAAAAeAAgAAAAGAAEAAAAfAAgAAAAGAAEAAAAgAAgAAAAGAAEAAAAhAAgAAAAGAAEAAAAiAAgAAAAGAAEAAAAjAAgAAAAGAAEAAAAkAAgAAAAGAAEAAAAlAAgAAAAGAAEAAAAmAAgAAAAGAAEAAAAnAAgAAAAGAAEAAAAoAAgAAAAGAAEAAAApAAgAAAAGAAEAAAAqAAgAAAAGAAEAAAArAAgAAAAGAAEAAAAsAAgAAAAGAAEAAAAoAAMAAAAGAAEAAAApAAMAAAAHAAEAAAAnAAMAAAAFAAEAAAAnAAQAAAAFAAMAAAAoAAQAAAAGAAMAAAApAAQAAAAHAAMAAAAoAAcAAAABAAQAAAAmAAcAAAABAAQAAAAxAAQAAAAGAAIAAAAxAAUAAAAGAAIAAAAxAAYAAAAGAAIAAAAxAAcAAAAGAAIAAAAxAAgAAAAGAAIAAAAxAAkAAAAGAAIAAAAxAAoAAAAGAAIAAAAxAAsAAAAGAAIAAAAwAAsAAAAGAAIAAAAwAAoAAAAGAAIAAAAwAAkAAAAGAAIAAAAwAAgAAAAGAAIAAAAwAAcAAAAGAAIAAAAwAAYAAAAGAAIAAAAwAAUAAAAGAAIAAAAwAAQAAAAGAAIAAAAzAAgAAAAGAAEAAAAzAAkAAAAGAAIAAAAzAAoAAAAGAAIAAAAzAAsAAAAGAAIAAAAyAAsAAAAGAAIAAAAyAAoAAAAGAAIAAAAyAAkAAAAGAAIAAAAyAAgAAAAGAAEAAAA0AAgAAAAGAAEAAAA1AAgAAAAGAAEAAAA2AAgAAAAGAAEAAAA3AAgAAAAGAAEAAAA4AAgAAAAGAAEAAAA5AAgAAAAGAAEAAAA6AAgAAAAGAAEAAAA7AAgAAAAGAAEAAAA8AAgAAAAGAAEAAAA9AAgAAAAGAAEAAAA+AAgAAAAGAAEAAAA/AAgAAAAGAAEAAABAAAgAAAAGAAEAAABBAAgAAAAGAAEAAABCAAgAAAAGAAEAAABDAAgAAAAGAAEAAABEAAgAAAAGAAEAAABFAAgAAAAGAAEAAABGAAgAAAAGAAEAAABHAAgAAAAGAAEAAABIAAgAAAAGAAEAAABJAAgAAAAGAAEAAABKAAgAAAAGAAIAAABKAAcAAAAGAAIAAABKAAYAAAAGAAIAAABKAAUAAAAGAAIAAABKAAQAAAAGAAIAAABKAAMAAAAGAAIAAABKAAIAAAAGAAIAAABKAAEAAAAGAAIAAABKAAAAAAAGAAIAAABKAP//AAAGAAIAAABKAP7/AAAGAAIAAABKAP3/AAAGAAIAAABKAPz/AAAGAAIAAABKAPv/AAAGAAIAAABKAPr/AAAGAAIAAABKAPn/AAAGAAIAAABKAPj/AAAGAAIAAABLAPj/AAAGAAIAAABMAPj/AAAGAAIAAABMAPn/AAAGAAIAAABMAPr/AAAGAAIAAABMAPv/AAAGAAIAAABMAPz/AAAGAAIAAABMAP3/AAAGAAIAAABMAP7/AAAGAAIAAABMAP//AAAGAAIAAABMAAAAAAAGAAIAAABMAAEAAAAGAAIAAABMAAIAAAAGAAIAAABMAAMAAAAGAAIAAABMAAQAAAAGAAIAAABMAAUAAAAGAAIAAABMAAYAAAAGAAIAAABMAAcAAAAGAAIAAABMAAgAAAAGAAIAAABMAAkAAAAGAAIAAABMAAoAAAAGAAIAAABMAAsAAAAGAAIAAABLAAsAAAAGAAIAAABKAAsAAAAGAAIAAABKAAoAAAAGAAIAAABJAAoAAAAGAAIAAABIAAoAAAAGAAIAAABHAAoAAAAGAAIAAABGAAoAAAAGAAIAAABFAAoAAAAGAAIAAABEAAoAAAAGAAIAAABDAAoAAAAGAAIAAABCAAoAAAAGAAIAAABBAAoAAAAGAAIAAABAAAoAAAAGAAIAAAA/AAoAAAAGAAIAAAA+AAoAAAAGAAIAAAA9AAkAAAAGAAIAAAA8AAkAAAAGAAIAAAA7AAkAAAAGAAIAAAA6AAkAAAAGAAIAAAA5AAkAAAAGAAIAAAA0AAoAAAAGAAIAAAA1AAoAAAAGAAIAAAA2AAoAAAAGAAIAAAA3AAoAAAAGAAIAAAA2AAkAAAAGAAIAAAA1AAkAAAAGAAIAAAA0AAkAAAAGAAIAAAA3AAkAAAAGAAIAAAA4AAkAAAAGAAIAAAA0AAsAAAAGAAIAAAA1AAsAAAAGAAIAAAA2AAsAAAAGAAIAAAA3AAsAAAAGAAIAAAA4AAsAAAAGAAIAAAA5AAsAAAAGAAIAAAA6AAsAAAAGAAIAAAA7AAsAAAAGAAIAAAA8AAsAAAAGAAIAAAA9AAsAAAAGAAIAAAA+AAsAAAAGAAIAAAA/AAsAAAAGAAIAAABAAAsAAAAGAAIAAABBAAsAAAAGAAIAAABCAAsAAAAGAAIAAABDAAsAAAAGAAIAAABEAAsAAAAGAAIAAABFAAsAAAAGAAIAAABGAAsAAAAGAAIAAABHAAsAAAAGAAIAAABJAAsAAAAGAAIAAABIAAsAAAAGAAIAAABJAAkAAAAGAAIAAABIAAkAAAAGAAIAAABHAAkAAAAGAAIAAABGAAkAAAAGAAIAAABFAAkAAAAGAAIAAABEAAkAAAAGAAIAAAA+AAkAAAAGAAIAAAA/AAkAAAAGAAIAAABAAAkAAAAGAAIAAABBAAkAAAAGAAIAAABCAAkAAAAGAAIAAABDAAkAAAAGAAIAAAA8AAoAAAAGAAIAAAA7AAoAAAAGAAIAAAA6AAoAAAAGAAIAAAA5AAoAAAAGAAIAAAA4AAoAAAAGAAIAAAA9AAoAAAAGAAIAAABLAAoAAAAGAAIAAABLAAkAAAAGAAIAAABKAAkAAAAGAAIAAABLAAgAAAAGAAIAAABLAAcAAAAGAAIAAABLAAYAAAAGAAIAAABLAAUAAAAGAAIAAABLAAQAAAAGAAIAAABLAAMAAAAGAAIAAABLAAIAAAAGAAIAAABLAAEAAAAGAAIAAABLAAAAAAAGAAIAAABLAP//AAAGAAIAAABLAP7/AAAGAAIAAABLAP3/AAAGAAIAAABLAPz/AAAGAAIAAABLAPv/AAAGAAIAAABLAPr/AAAGAAIAAABLAPn/AAAGAAIAAAAXAAIAAAAGAAMAAAAWAAIAAAAFAAMAAAAxAAMAAAAGAAIAAAAxAAIAAAAGAAIAAAAxAAEAAAAGAAIAAAAxAAAAAAAGAAIAAAAxAP//AAAGAAIAAAAxAP7/AAAGAAIAAAAxAP3/AAAGAAIAAAAxAPz/AAAGAAIAAAAxAPv/AAAGAAIAAAAxAPr/AAAHAAEAAAAwAPr/AAAGAAEAAAAvAPr/AAAGAAEAAAAuAPr/AAAGAAEAAAAtAPr/AAAFAAEAAAAtAPv/AAAGAAIAAAAtAPz/AAAGAAIAAAAtAP3/AAAGAAIAAAAtAP7/AAAGAAIAAAAtAP//AAAGAAIAAAAuAPz/AAAGAAIAAAAuAPv/AAAGAAIAAAAvAPv/AAAGAAIAAAAwAPv/AAAGAAIAAAAwAPz/AAAGAAIAAAAwAP3/AAAGAAIAAAAvAP3/AAAGAAIAAAAvAPz/AAAGAAIAAAAuAP3/AAAGAAIAAAAuAP7/AAAGAAIAAAAuAP//AAAGAAIAAAAvAP7/AAAGAAIAAAAwAP7/AAAGAAIAAAAwAP//AAAGAAIAAAAwAAAAAAAGAAIAAAAwAAEAAAAGAAIAAAAwAAIAAAAGAAIAAAAwAAMAAAAGAAIAAAAvAAAAAAAGAAIAAAAvAP//AAAGAAIAAAAkAP//AAAHAAEAAAAjAP//AAAGAAEAAAAiAP//AAAFAAEAAAAjAAAAAAAGAAMAAAAkAAAAAAAHAAMAAAAiAAAAAAAFAAMAAAAnAPz/AAAFAAMAAAApAPz/AAAHAAMAAAAoAPz/AAAGAAMAAAAoAPv/AAAGAAEAAAAnAPv/AAAFAAEAAAApAPv/AAAHAAEAAAA3AAEAAAAGAAEAAAA3AAIAAAAGAAMAAAA4AAEAAAAHAAEAAAA4AAIAAAAHAAMAAAA2AAEAAAAFAAEAAAA2AAIAAAAFAAMAAAAvAPn/AAACAAQAAAAwAPn/AAABAAQAAAAuAPn/AAABAAQAAAAtAPn/AAAAAAQAAAAxAPn/AAAAAAQAAAAoAPr/AAAEAAUAAAAzAAcAAAAEAAUAAAAnAAcAAAAEAAUAAAApAAIAAAAAAAQAAAA2AAcAAAACAAQAAABFAAcAAAACAAQAAABDAAEAAAAFAAEAAABDAAIAAAAFAAMAAABEAAEAAAAGAAEAAABEAAIAAAAGAAMAAABFAAEAAAAHAAEAAABFAAIAAAAHAAMAAAA3AAcAAAABAAQAAABEAAcAAAABAAQAAAA9AAcAAAABAAQAAAA+AAcAAAAAAAQAAAA8AAcAAAAAAAQAAABIAAcAAAAEAAUAAABJAAcAAAADAAQAAAA0AAcAAAADAAYAAAA=")
tile_set = SubResource("TileSet_tlwt5")
script = ExtResource("4_dwbse")

[node name="cass" parent="." unique_id=849479898 instance=ExtResource("2_fj7yv")]
position = Vector2(-40, 176)

[node name="bird_enemy" parent="." unique_id=1265966241 instance=ExtResource("5_036b0")]
position = Vector2(312, 152)

[node name="Node2D" parent="." unique_id=849964934 instance=ExtResource("1_036b0")]
z_index = -1
position = Vector2(-64, -112)

[node name="crab_enemy" parent="." unique_id=1515564281 instance=ExtResource("6_dwbse")]
position = Vector2(-272, 176)

[node name="konky_dong" parent="." unique_id=896747261 instance=ExtResource("7_pkg7o")]
position = Vector2(952, 176)

[node name="barrel" parent="." unique_id=1190427390 instance=ExtResource("8_gbfbk")]
position = Vector2(112, 160)

[node name="barrel4" parent="." unique_id=1380229015 instance=ExtResource("8_gbfbk")]
position = Vector2(-336, 144)

[node name="barrel5" parent="." unique_id=1987951657 instance=ExtResource("8_gbfbk")]
position = Vector2(1024, 160)

[node name="barrel3" parent="." unique_id=779695769 instance=ExtResource("8_gbfbk")]
position = Vector2(592, 160)

[node name="barrel2" parent="." unique_id=675712774 instance=ExtResource("8_gbfbk")]
position = Vector2(-184, 176)

[node name="Start_Timer" type="Timer" parent="." unique_id=175916755]
wait_time = 2.0
one_shot = true

[node name="Starting_Position" type="Marker2D" parent="." unique_id=481146780]
position = Vector2(-40, 176)

[connection signal="start_game" from="hud" to="." method="new_game"]
[connection signal="health_changed" from="cass" to="PlayerHealth" method="_on_cass_health_changed"]
[connection signal="no_health" from="cass" to="." method="game_over"]
[connection signal="timeout" from="Start_Timer" to="." method="_on_start_timer_timeout"]
